# daily-digest

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
10/5f17aaed53/: metadata.json
10/5f17aaed53/0/: content_hash.txt  metadata.json
4e/3794618040/: metadata.json
4e/3794618040/0/: content_hash.txt  metadata.json  prompt.txt
63/19b4c3363b/: metadata.json
63/19b4c3363b/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
8b/68ad9685c6/: metadata.json
8b/68ad9685c6/0/: content_hash.txt  metadata.json  prompt.txt
dd/37fe7727c8/: metadata.json
dd/37fe7727c8/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
deploy/: daily-digest-memes.timer  daily-digest-news.timer  daily-digest-tech.timer  daily-digest@.service  install.sh
eb/2e0bd9d1a1/: metadata.json
eb/2e0bd9d1a1/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
ef/3129acdb99/: metadata.json
ef/3129acdb99/0/: content_hash.txt  metadata.json  prompt.txt
src/daily_digest/: __init__.py  __main__.py  config.py  format.py  telegram.py
src/daily_digest/sources/: hackernews.py  reddit.py  rss.py
