[project]
name = "daily-digest"
version = "0.1.0"
description = "Daily digests of tech/meme/world-news highlights delivered to Telegram."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
]

[project.scripts]
daily-digest = "daily_digest.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_digest"]
